started obj parsing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(GLUT REQUIRED)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp TextureMapper.cpp TextureMapper.h)
+set(SOURCE_FILES main.cpp TextureMapper.cpp TextureMapper.h Vector.cpp Vector.h)
+
 add_executable(texture_mapping ${SOURCE_FILES})
 target_link_libraries(texture_mapping libfreeglut.a libfreeglut_static.a)
